@@ -4,6 +4,7 @@
  * :folding=explicit:collapseFolds=1:
  *
  * Copyright (C) 1999, 2005 Slava Pestov
+ * Copyright (C) 2010 Eric Le Lay
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -31,8 +32,12 @@ import java.util.*;
  * A history list. One history list can be used by several history text
  * fields. Note that the list model implementation is incomplete; no events
  * are fired when the history model changes.
+ * The max size of the history is defined globally via setDefaultMax(),
+ *  see jEdit.java for instance.
+ * It may be locally overriden by calling setMax() on a HistoryModel instance.
  *
  * @author Slava Pestov
+ * @author Eric Le Lay
  * @version $Id$
  */
 public class HistoryModel extends DefaultListModel
@@ -46,6 +51,7 @@ public class HistoryModel extends DefaultListModel
 	public HistoryModel(String name)
 	{
 		this.name = name;
+		this.max = -1;
 	} //}}}
 
 	//{{{ addItem() method
@@ -65,7 +71,9 @@ public class HistoryModel extends DefaultListModel
 
 		insertElementAt(text,0);
 
-		while(getSize() > max)
+		// use the local max unless it's not set
+		int myMax = max>=0 ? max : defaultMax;
+		while(getSize() > myMax)
 			removeElementAt(getSize() - 1);
 	} //}}}
 
@@ -160,9 +168,40 @@ public class HistoryModel extends DefaultListModel
 	} //}}}
 
 	//{{{ setMax() method
-	public static void setMax(int max)
+	/**
+	 * sets the maximum size of this history
+	 * @param max the new maximum size of this history of -1 to restore default
+	 */
+	public void setMax(int max)
 	{
-		HistoryModel.max = max;
+		this.max = max;
+	} //}}}
+
+	//{{{ getMax() method
+	/**
+	 * @return maximum size of this history or -1 is it's the default size
+	 */
+	public int getMax()
+	{
+		return max;
+	} //}}}
+
+	//{{{ setDefaultMax() method
+	/**
+	 * sets the default size of all HistoryModels.
+	 * Affects the VFS path history, the hypersearch history, etc..
+	 * To change the max size of one history, call setMax() instead.
+	 * @return default size limit for HistoryModels
+	 */
+	public static void setDefaultMax(int max)
+	{
+		HistoryModel.defaultMax = max;
+	} //}}}
+
+	//{{{ getDefaultMax() method
+	public static int getDefaultMax()
+	{
+		return HistoryModel.defaultMax;
 	} //}}}
 
 	//{{{ setSaver() method
@@ -172,7 +211,8 @@ public class HistoryModel extends DefaultListModel
 	} //}}}
 
 	//{{{ Private members
-	private static int max;
+	private int max;
+	private static int defaultMax;
 
 	private final String name;
 	private static Map<String, HistoryModel> models;
